fixed ios horizontal scrolling, now it has momentum scrolling.

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1,6 +1,7 @@
 
 @import "global.css";
 
+
 body {
     background: #f4f8fb;
 }
@@ -135,6 +136,7 @@ p::selection {
     align-items: center;
     justify-items: center;
     overflow-x: scroll;
+    -webkit-overflow-scrolling: touch;
     overflow-y: hidden;
 
 }
@@ -237,6 +239,7 @@ p::selection {
     width: 100%;
     display: flex;
     overflow-x: scroll;
+    -webkit-overflow-scrolling: touch;
     overflow-y: hidden;
 }
 @media screen and (min-width: 1000px) {
@@ -305,6 +308,7 @@ p::selection {
     padding: 10px;
     margin: 10px;
     overflow-x: scroll;
+    -webkit-overflow-scrolling: touch;
 }
 .post-full pre code::selection {
     color: white;
